--- a/Praticas/html/index.html
+++ b/Praticas/html/index.html
@@ -20,6 +20,7 @@
         <a href="exercicios/links.html">Links</a>
         <a href='exercicios/tabelas.html'>Tabelas</a>
         <a href="exercicios/form/formulario.html">Formulários</a>
+        <a href="exercicios/imagens.html">Imagens</a>
 
 
     </nav>
