--- a/Praticas/html/exercicios/form/formulario.html
+++ b/Praticas/html/exercicios/form/formulario.html
@@ -1,7 +1,49 @@
 <h1>Formulario</h1>
 
-<form action="http://localhost:3003/usuarios" method="POST">
+<form method="POST">
+    <input type="hidden" name="id" value="3">
     <input type="text" name="nome">
     <input type="password" name="senha">
-    <button>Incluir</button>
+    <textarea name="bio" cols="30" rows="10"></textarea>
+
+    <div>
+        <input type='radio' name='tipo' value='admin'>Admin
+        <input type='radio' name='tipo' value='regular'>Regular
+        <input type='radio' name='tipo' value='professor'>Professor
+
+    </div>
+
+    <div>
+        <input type="checkbox" name="ativo">Ativo
+    </div>
+
+    <select name='estado'>
+        <option value=''>Selecione</option>
+        <option value='ac'>Acre</option>
+        <option value='ba'>Bahia</option>
+        <option value='ce'>Ceará</option>
+    </select>
+
+    <select name='interesses' multiple size='5'>
+        <option value='js'>Javascript</option>
+        <option value='c'>C</option>
+        <option value='py'>python</option>
+    </select>
+
+    <button formaction="http://localhost:3003/usuarios">Incluir</button>
+    <button formaction="http://localhost:3003/usuarios/3">Alterar</button>
 </form>
+
+<style>
+    input,
+    textarea,
+    select {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    input[type=radio],
+    input[type=checkbox] {
+        display: inline;
+    }
+</style>
